tests/ui/limits/huge-static.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/huge-static.rs:19:1
   |
LL | static MY_TOO_BIG_ARRAY_1: TooBigArray = TooBigArray::new();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ values of the type `[u8; 2305843009213693952]` are too big for the target architecture

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
